# full-profiler

./: .gitignore  README.md  pyproject.toml  setup.py
example/: example.py
full_profiler/: main.py
src/: main.py
