[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full_profiler"
authors = [
    { name="Andrea Favia", email="andrea.favia@pm.me" },
]

version = "0.1.0"

description = "CLI memory and time profiler for python scripts"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: Linux",
]

dependencies = [
    'memory-profiler>=0.61.0','matplotlib>=3.6.2','typer>=0.7.0','snakeviz>=2.1.1','psutil'
]

readme = "README.md"

[project.urls]
Source = "https://github.com/faviasono/full-profiler"



[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/__init__.py" = [
    '__version__ = "{version}"',
]
